Revision history for Pod-Readme

  [Documentation]
  - Fixed typos in POD for requires plugin.

v1.0.3 2014-11-07 18:58 GMT
  - Fixed bug with minimum version of Class::Method::Modifiers.

v1.0.2 2014-10-13 22:18 BST
  - No changes since v1.0.1_08, just a version bump for a release.

  - See the full list of changes since v1.0.0 for more details.

  [Enhancements]
  - This is a complete rewrite, using modern Perl with Moo.

  - Added support for plugins, along with plugins to insert the module
    version, prerequisites and the latest changes.

  - Added the ability to generate a README in a variety of formats,
    such as POD, Markdown, HTML, RTF, etc.

  - Added command-line options to the pod2readme script, including the
    ability to specify the output format.

  - Switched to semantic versioning.

  - The documentation has been updated accordingly.

  [Incompatabilities]
  - Perl v5.10.1 is required.

  - This is no longer a subclass of a POD parser, although it has some
    wrapper methods for compatability with software known to use it.

v1.0.1_08 2014-10-13
  [Documentation]
  - More documentation tweaks.

v1.0.1_07 2014-10-10 16:47 BST
  [Documentation]
  - More documentation tweaks.

  [Enhancements]
  - Added a depends_on method that returns a list of files that the
    README depends on.

  - Added dependencies_updated method to check if dependencies have
    been updated.

  - The README is only updated if dependencies have been updated.

  - Added a --force option to pod2readme to force updates.

  [Other Changes]
  - Moved pod2readme tests to xt directory for author tests, due to
    inconsistent behaviour on different platforms.

v1.0.1_06 2014-10-10
  [Documentation]
  - More documentation tweaks.

  - Changed pod2readme usage text to match abstract.

  [Bug Fixes]
  - Added minimum Perl version to Makefile.PL.

  - Removed use of Path::Class in pod2readme utility.

  [Other Changes]
  - Added rudimentary tests for pod2readme script.
